# misc-code-playground

./: .gitignore  Makefile  measure_sys_cnt.c
asm/: small_hello.c  small_hello_buggy.c
backtrace/: backtrace.c
cmake-test/: CMakeLists.txt  manual_compile.txt
cmake-test/include/: hello.hpp
cmake-test/src/: hello.cpp  main.cpp
dynlib-wrapper/: Makefile  dynprint  local-config.mk  main.c  mywrapper.c  mywrapper.h
foreign-dlopen/src/: Makefile.fdlhelper  fdlhelper  foreign_dlopen_demo  loader
foreign-dlopen/src/amd64/: z_syscall.S
gcc/: foo.c  weaksym.c
interpositioning/: Makefile  README.md  dwprintf.c  dwprintf.h  main.c  muslprintf.c
mini-musllibc/: Makefile  client.c  main.c  server  server.c  syscall.i
mini-musllibc/include/: errno.h  fcntl.h  features.h  mini_syscalls.h  stdarg.h  sys_syscall.h  unistd.h
mini-musllibc/include/bits/: alltypes.h  syscall.h
mini-musllibc/include/sys/: socket.h  syscall.h
mini-musllibc/src/: __errno_location.c  errno.h  internal_pthread_impl.h  internal_syscall.h  mini_syscall_cp.c  mini_syscall_ret.c  mini_syscalls.c  pthread_arch_x86_64.h  syscall.c  syscall_x86_64.h
mm/: Makefile  handle_segv.c  mmap.c
syscall_bench/: Makefile  README.md  measure_syscall
syscall_user_dispatch/: Makefile  sud-parent-child.c  sud.c  vm_fault.c
tls/: Makefile  fsgsbase.c  tls_test.c  tls_test.i  tls_test.s
uds/: client  client.c  server  server.c
